# sssg

./: CMakeLists.txt  README.md
src/: main.cpp  markdown.cpp  markdown.hpp
